--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
     "apexcharts": "^3.33.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.27.1",
     "react-query": "^3.34.16",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
